--- a/Examples/software_upgrade.yml
+++ b/Examples/software_upgrade.yml
@@ -3,7 +3,6 @@
   hosts: bigip_lab
   gather_facts: False
   any_errors_fatal: true
-  force_handlers: True
   vars:
 
     provider:
@@ -14,15 +13,15 @@
 
   tasks:
 
-  - name: Register failover state
-    command: cat /var/prompt/ps1
-    register: failover_state
+    - name: Register failover state
+      command: cat /var/prompt/ps1
+      register: failover_state
 
-  - name: Register current boot volume name
-    shell: tmsh show sys software version | grep -v no | awk '/.D[1-9]/{print $1}'
-    register: cur_vol
+    - name: Register current boot volume name
+      shell: tmsh show sys software version | grep -v no | awk '/.D[1-9]/{print $1}'
+      register: cur_vol
     
-    block:
+    - block:
       - name: Save running configuration
         bigip_config:
           save: yes
@@ -129,83 +128,73 @@
         register: result
         delegate_to: localhost
 
-        block:
+      - name: Post-Upgrade Parse
+        set_fact:
+          endvirtstats: "{{ f5_info.results | map(attribute='virtual_servers') | flatten
+            | items2dict(key_name='full_path', value_name='availability_status') }}"
+          endpoolstats: "{{ f5_info.results | map(attribute='ltm_pools') | flatten
+            | items2dict(key_name='full_path', value_name='availability_status') }}"
+          endselfstats: "{{ f5_info.results | map(attribute='self_ips') | flatten
+            | items2dict(key_name='full_path', value_name='vlan') }}"
+          endvlanstats: "{{ f5_info.results | map(attribute='vlans') | flatten
+            | items2dict(key_name='full_path', value_name='tag') }}"
+      
+      - name: Check Virtual Servers
+        assert:
+          that:
+            - item.value == endvirtstats[item.key]
+          fail_msg: "Virtual server '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endvirtstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startvirtstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
-          - name: Post-Upgrade Parse
-            set_fact:
-              endvirtstats: "{{ f5_info.results | map(attribute='virtual_servers') | flatten
-                | items2dict(key_name='full_path', value_name='availability_status') }}"
-              endpoolstats: "{{ f5_info.results | map(attribute='ltm_pools') | flatten
-                | items2dict(key_name='full_path', value_name='availability_status') }}"
-              endselfstats: "{{ f5_info.results | map(attribute='self_ips') | flatten
-                | items2dict(key_name='full_path', value_name='vlan') }}"
-              endvlanstats: "{{ f5_info.results | map(attribute='vlans') | flatten
-                | items2dict(key_name='full_path', value_name='tag') }}"
-          
-          - name: Check Virtual Servers
-            assert:
-              that:
-                - item.value == endvirtstats[item.key]
-              fail_msg: "Virtual server '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endvirtstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startvirtstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
+      - name: Check Pools
+        assert:
+          that:
+            - item.value == endpoolstats[item.key]
+          fail_msg: "Pool '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endpoolstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startpoolstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
-          - name: Check Pools
-            assert:
-              that:
-                - item.value == endpoolstats[item.key]
-              fail_msg: "Pool '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endpoolstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startpoolstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
+      - name: Check Self-IPs
+        assert:
+          that:
+            - item.value == endselfstats[item.key]
+          fail_msg: "Self IP '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startselfstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
-          - name: Check Self-IPs
-            assert:
-              that:
-                - item.value == endselfstats[item.key]
-              fail_msg: "Self IP '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startselfstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
+      - name: Check VLANs
+        assert:
+          that:
+            - item.value == endvlanstats[item.key]
+          fail_msg: "VLAN '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startvlanstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
-          - name: Check VLANs
-            assert:
-              that:
-                - item.value == endvlanstats[item.key]
-              fail_msg: "VLAN '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startvlanstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
-
-        rescue:
-          - name: Post checks failed, rolling back and exiting play
-            command: tmsh reboot volume "{{ cur_vol.stdout }}"
-          
-          - meta: end_play
-
-        when: "'Standby' in failover_state.stdout"
-
-    when: "'Standby' in failover_state.stdout"
+      when: "'Standby' in failover_state.stdout"
 
 
-  - name: Failover so we're running on the new software
-    command: tmsh run sys failover standby
-    when: "'Active' in failover_state.stdout"
-    
-  - name: Update failover state variable to upgrade next standby
-    command: cat /var/prompt/ps1
-    register: failover_state
+    - name: Failover so we're running on the new software
+      command: tmsh run sys failover standby
+      when: "'Active' in failover_state.stdout"
+      
+    - name: Update failover state variable to upgrade next standby
+      command: cat /var/prompt/ps1
+      register: failover_state
 
-    block:
+    - block:
       - name: Save running configuration
         bigip_config:
           save: yes
@@ -293,70 +282,60 @@
         register: result
         delegate_to: localhost
       
-        block:
+      - name: Post-Upgrade Parse
+        set_fact:
+          endvirtstats: "{{ f5_info.results | map(attribute='virtual_servers') | flatten
+            | items2dict(key_name='full_path', value_name='availability_status') }}"
+          endpoolstats: "{{ f5_info.results | map(attribute='ltm_pools') | flatten
+            | items2dict(key_name='full_path', value_name='availability_status') }}"
+          endselfstats: "{{ f5_info.results | map(attribute='self_ips') | flatten
+            | items2dict(key_name='full_path', value_name='vlan') }}"
+          endvlanstats: "{{ f5_info.results | map(attribute='vlans') | flatten
+            | items2dict(key_name='full_path', value_name='tag') }}"
+      
+      - name: Check Virtual Servers
+        assert:
+          that:
+            - item.value == endvirtstats[item.key]
+          fail_msg: "Virtual server '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endvirtstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startvirtstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
-          - name: Post-Upgrade Parse
-            set_fact:
-              endvirtstats: "{{ f5_info.results | map(attribute='virtual_servers') | flatten
-                | items2dict(key_name='full_path', value_name='availability_status') }}"
-              endpoolstats: "{{ f5_info.results | map(attribute='ltm_pools') | flatten
-                | items2dict(key_name='full_path', value_name='availability_status') }}"
-              endselfstats: "{{ f5_info.results | map(attribute='self_ips') | flatten
-                | items2dict(key_name='full_path', value_name='vlan') }}"
-              endvlanstats: "{{ f5_info.results | map(attribute='vlans') | flatten
-                | items2dict(key_name='full_path', value_name='tag') }}"
-          
-          - name: Check Virtual Servers
-            assert:
-              that:
-                - item.value == endvirtstats[item.key]
-              fail_msg: "Virtual server '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endvirtstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startvirtstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
+      - name: Check Pools
+        assert:
+          that:
+            - item.value == endpoolstats[item.key]
+          fail_msg: "Pool '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endpoolstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startpoolstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
-          - name: Check Pools
-            assert:
-              that:
-                - item.value == endpoolstats[item.key]
-              fail_msg: "Pool '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endpoolstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startpoolstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
+      - name: Check Self-IPs
+        assert:
+          that:
+            - item.value == endselfstats[item.key]
+          fail_msg: "Self IP '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startselfstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
-          - name: Check Self-IPs
-            assert:
-              that:
-                - item.value == endselfstats[item.key]
-              fail_msg: "Self IP '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startselfstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
-
-          - name: Check VLANs
-            assert:
-              that:
-                - item.value == endvlanstats[item.key]
-              fail_msg: "VLAN '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
-              success_msg: "{{ item.key }} state unchanged"
-              quiet: yes
-            loop: "{{ startvlanstats|dict2items }}"
-            loop_control:
-              label: "{{ item.key }}"
-
-        rescue:
-          - name: Post checks failed, rolling back and exiting play
-            command: tmsh reboot volume "{{ cur_vol.stdout }}"
-          
-          - meta: end_play
-
-        when: "'Standby' in failover_state.stdout"
+      - name: Check VLANs
+        assert:
+          that:
+            - item.value == endvlanstats[item.key]
+          fail_msg: "VLAN '{{ item.key }}' state changed from '{{ item.value }}' to '{{ endselfstats[item.key] }}'"
+          success_msg: "{{ item.key }} state unchanged"
+          quiet: yes
+        loop: "{{ startvlanstats|dict2items }}"
+        loop_control:
+          label: "{{ item.key }}"
 
       - name: Register device-groups with pending changes
         shell: tmsh show cm sync-status | grep 'to group' | awk '{print $8}'
@@ -373,18 +352,18 @@
           timeout: 20
         delegate_to: localhost
             
-    when: "'Standby' in failover_state.stdout"
+      when: "'Standby' in failover_state.stdout"
 
 
-  - name: Failover to resume original HA state
-    command: tmsh run sys failover standby
-    when: "'Active' in failover_state.stdout"
-  
-  - name: Backup new version configuration
-    bigip_ucs_fetch:
-      async_timeout: 600
-      src: "{{ inventory_hostname + '-' + date.stdout +  'post-upgrade-backup.ucs' }}"
-      dest: "{{ '/backups/' + inventory_hostname + '-' + date.stdout +  'post-upgrade-backup.ucs' }}"
-      provider: "{{ provider }}"
-    delegate_to: localhost
+    - name: Failover to resume original HA state
+      command: tmsh run sys failover standby
+      when: "'Active' in failover_state.stdout"
+    
+    - name: Backup new version configuration
+      bigip_ucs_fetch:
+        async_timeout: 600
+        src: "{{ inventory_hostname + '-' + date.stdout +  'post-upgrade-backup.ucs' }}"
+        dest: "{{ '/backups/' + inventory_hostname + '-' + date.stdout +  'post-upgrade-backup.ucs' }}"
+        provider: "{{ provider }}"
+      delegate_to: localhost
 ...
