--- a/F5/Ansible/gatherDeviceInfo.yml
+++ b/F5/Ansible/gatherDeviceInfo.yml
@@ -1,10 +1,8 @@
 ---
 - name: F5 BIG-IP
-  hosts: F5-Lab
+  hosts: F5_Lab
   gather_facts: False
-  collections:
-    - f5networks.f5_modules
-    
+
   vars:
 
     provider:
