--- a/F5/Ansible/collections/requirements.yml
+++ b/F5/Ansible/collections/requirements.yml
@@ -5,4 +5,4 @@ collections:
   - name: operator_sdk.util
     version: "0.5.0"
   - name: f5networks.f5_modules
-    version: "1.20.0"
+    version: '>=1.20.0'
